[package]
name = "finance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
teloxide = {version = "0.12.2", features = ["macros"]}
sqlx = {version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"]}
tokio = {version = "1.0", features = ["full", "rt-multi-thread", "macros"]}
log = "0.4"
pretty_env_logger = "0.5"
futures = "0.3"